CAMBIO DE TITULO

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
        <div id="principal">
            <header>
                <div id="logo">
-                   <h1 class="titulo">BASKETBALL WORLD</h1>
+                   <h1 class="titulo">MUNDO BASKETBALL</h1>
                    <p class="sub-titulo">Ahora demuestra tu talento...</p>
                </div>
 
