--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
        <meta charset="utf-8">
        <meta http-equiv="X-UA-Compatible" content="IE=edge">
        <title>BasketballStore.com</title>
-       <link rel="stylesheet" type="text/css" href="css/estilo.css">
+       <link rel="stylesheet" type="text/css" href="Styles/estilo.css">
 
      
        <!--script type="text/javascript" >
